Fixed first name and last name insert bugs, added endpoint for searching student by last name
