# swagger_server/services/student_service.py
@@ -16,7 +16,9 @@ student_db = TinyDB(db_file_path)
 
 
 def add_student(student):
-    # if student.first_name and student.last_name:
+    if not student.first_name or not student.last_name:
+        return 'method not allowed', 405
+
     queries = []
     query = Query()
     queries.append(query.first_name == student.first_name)
@@ -28,9 +30,9 @@ def add_student(student):
 
     doc_id = student_db.insert(student.to_dict())
     student.student_id = doc_id
+    student_db.update({'student_id': doc_id}, query)
+
     return student.student_id
-    # else:
-        # return 'method no allowed', 405
 
 
 def get_student_by_id(student_id, subject):
@@ -47,6 +49,15 @@ def get_student_by_id(student_id, subject):
             return student
         else:
             return None
+
+
+def get_student_by_last_name(last_name):
+    student = student_db.get(Query().last_name == last_name)
+    if not student:
+        return student
+
+    student = Student.from_dict(student)
+    return student
 
 
 def delete_student(student_id):
